--- a/.github/workflows/_job_build.yml
+++ b/.github/workflows/_job_build.yml
@@ -50,6 +50,15 @@ jobs:
           fetch-tags: true
           submodules: false
 
+      - name: Patch
+        run: |
+          git submodule update --init --filter=tree:0 --recursive
+          # apply proton-ge-custom patches
+          ./patches/protonprep-valve-staging.sh || true
+          # strip binaries at compile time to save space in the runner
+          patch -Np1 -i ./.github/patches/0001-build-strip-binaries-early.patch
+          mkdir ./build
+
       - name: Configure
         working-directory: ./build
         run: |
